--- a/java-spring-boot-lesson-four/src/main/resources/application.properties
+++ b/java-spring-boot-lesson-four/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8080
+server.servlet.context-path=/
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_db?currentSchema=boot
+spring.datasource.username=admin
+spring.datasource.password=52669
